fixed some of the media queries and spacing issues

--- a/less/index.less
+++ b/less/index.less
@@ -4,142 +4,227 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-	height:100%;
+html,
+body {
+  height: 100%;
 }
 // variables
-@gray: #DCDCDC;
+@gray: #dcdcdc;
 @padding: 15px;
 
 // Mixins
 .center() {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 20px;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
-  
-  
-  html {
-	box-sizing: border-box;
-	font-size: 62.5%; 
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-size: 2rem;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+p {
+  line-height: 1.25;
+  margin: 20px 0;
+  font-size: 1.8rem;
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  font-size: 1.6rem;
+}
+
+header {
+  // border-bottom: 1px solid black;
+  margin: 20px 0;
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+
+  @media (max-width: 500px) {
+    flex-direction: column;
+    align-items: center;
   }
-  
-  *, *:before, *:after {
-	box-sizing: inherit;
+
+  nav {
+    margin-left: 62px;
+
+    @media (max-width: 500px) {
+      margin-left: 0;
+    }
+
+    a {
+      margin-left: 20px;
+      font-size: 1.8rem;
+    }
   }
-  
-  h1, h2, h3, h4, h5 {
-	font-size: 2rem;
+}
+.box-content {
+  display: flex;
+  justify-content: center;
+  h1 {
+    font-size: 15rem;
+    color: white;
+    text-shadow: 8px 4px limegreen;
+    @media (max-width: 500px) {
+	  margin-bottom: 20px;
+	  font-size: 6rem;
+	  text-align:center;
+    }
   }
-  
-  img {
-   width: 100%;
-   height: auto;
-  }
-  
-  p {
-	line-height: 1.25;
-	margin: 20px 0;
-	font-size: 1.8rem;
-  }
-  
-  .container {
-	max-width: 600px;
-	margin: 0 auto;
-	font-size: 1.6rem;
-  }
-  
-  header {
-	// border-bottom: 1px solid black;
-	margin: 20px 0;
-	padding: 20px 0;
-	display: flex;
-	justify-content: center;
-  
-	@media( max-width: 500px ) {
-	  flex-direction: column;
-	  align-items: center;
-	}
-	
-	
-	nav {
-	  margin-left: 62px;
-	  
-	  @media( max-width: 500px ) {
-		margin-left: 0;
-	  }
-	  
-	  a {
-		margin-left: 20px;
-		font-size: 1.8rem;
-	  }
-	  
-	}
-  } 
-  .box-content {
-    display: flex;
-	justify-content:center;
-	 h1 {
-	font-size: 15rem;
-	color:white;
-	text-shadow: 8px 4px limegreen;
-		@media( max-width: 500px ) {
-		  margin-bottom: 20px;
-		}
-	  }
 }
 
 strong {
@@ -147,84 +232,97 @@ strong {
   color: green;
 }
 
-  .main-content {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	@media( max-width: 500px ) {
-	  flex-direction: column;
-		
-	} 
-	.experience{
-		  border:1px solid black;
-		  border-radius: 5px;
-		  background-color:@gray;
-		  margin: 20px 2.5%;
-			width: 100%;
-			padding-top: 10px;
-			font-size: 2.5rem;
-	  }
-	  .skills{
-		  border:1px solid black;
-		  border-radius: 5px;
-		  background-color:@gray;
-		  margin: 20px 2.5%;
-			width: 100%;
-			padding-top: 10px;
-			font-size: 2.5rem;
-	  }
-	  .about-me{
-		border:1px solid black;
-		border-radius: 5px;
-		background-color:@gray;
-		margin: 20px 2.5%;
+.main-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  @media (max-width: 500px) {
+    flex-direction: column;
+  }
+  .experience {
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: @gray;
+    margin: 20px 2.5%;
+    width: 50%;
+    padding-top: 10px;
+	font-size: 2.5rem;
+	@media (max-width: 500px) {
 		width: 100%;
-		padding-top: 10px;
+	  }
+  }
+  .skills {
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: @gray;
+    margin: 20px 2.5%;
+    width: 50%;
+    padding-top: 10px;
+	font-size: 2.5rem;
+	@media (max-width: 500px) {
+		width: 100%;
+	  }
+  }
+  .about-me {
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: @gray;
+    margin: 20px 2.5%;
+    width: 100%;
+    padding-top: 10px;
+    font-size: 2.5rem;
+	width: 50%;
+	@media (max-width: 500px) {
+		width: 100%;
 		font-size: 2.5rem;
-
-	}
-		h2 {
-			display:flex;
-			justify-content: center;
-			font-family: 'Charm', cursive;
-		}
+	  }
   }
-  
-	 
-  
+  h2 {
+    display: flex;
+    justify-content: center;
+    font-family: "Charm", cursive;
+  }
+}
+
 .nav-btn {
-	background-color: green;
-	border-radius: 15px;
-	color: white;
-	width: 100px;
-	font-size: 2rem;
-	margin:  0 10px 20px;
-	opacity: 0.7;
-	transition: 0.6s;
-	text-decoration: none;
-	cursor: pointer;
+  background-color: green;
+  border-radius: 15px;
+  color: white;
+  width: 100px;
+  font-size: 2rem;
+  margin: 0 10px 20px;
+  opacity: 0.7;
+  transition: 0.6s;
+  text-decoration: none;
+  cursor: pointer;
+  @media (max-width: 500px) {
+	width: 90%;
+	height: 50px;
+	font-size: 2.5rem;
   }
+}
 
-  .nav-btn:hover {opacity: 1}
+.nav-btn:hover {
+  opacity: 1;
+}
 
-	@media( max-width: 500px ) {
-	  width: 90%;
-	  height: 50px;
-	  font-size: 2.5rem;
-	}
-  
-	@media( max-width: 400px ) {
-	  background: green;
-	  color: white;
-  
-	}
-  
-	body {
-		background-image: url("https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80");
-	}
+@media (max-width: 500px) {
+  width: 90%;
+  height: 50px;
+  font-size: 2.5rem;
+}
 
-	ul {
-		li{
-			font-size: 2rem;
-		}
-	}
+@media (max-width: 400px) {
+  background: green;
+  color: white;
+}
+
+body {
+  background-image: url("https://images.unsplash.com/photo-1445905595283-21f8ae8a33d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80");
+}
+
+ul {
+  li {
+    font-size: 2rem;
+  }
+}
